--- a/web.config.template
+++ b/web.config.template
@@ -29,6 +29,18 @@
 				<match url="^(.*)\.htm$"  />
 				<action type="Rewrite" url="//redirect2.phtml?urlkey={R:1}"  />
 			</rule>
+			<rule name="rule 1x">
+				<match url="(.*)/admin/"  />
+				<action type="Rewrite" url="//admin/index.phtml"  />
+			</rule>
+			<rule name="rule 2x" stopProcessing="true">
+				<match url="^([^/]+)/?$" />
+				<conditions>
+					<add input="{REQUEST_FILENAME}" matchType="IsFile" negate="true" />
+					<add input="{REQUEST_FILENAME}" matchType="IsDirectory" negate="true" />
+				</conditions>
+				<action type="Rewrite" url="//redirect.phtml?urlkey={R:1}&amp;url_type=0" />
+			</rule>
 		</rules>
 		</rewrite>
     </system.webServer>
